# tusa8

tusa-8.395/: CMakeLists.txt
tusa-8.395/apps/: CMakeLists.txt  chat.empty.sql  co  cof  file_dump.cpp  filt0x13.pl  filt0x13F.pl  filtPString.pl  geo_cvt_blocks.cpp  geo_cvt_loc.cpp  gettime.pl  hosts.pl  lockctl.h  test.cpp  test.sql
tusa-8.395/apps/img_cvt/: _img_cvt.cpp  _img_cvt_w32.sln  _img_cvt_w32.vcproj
tusa-8.395/apps/license/: 1  CMakeLists.txt  datingclub.ru  datingclub.ru.lic  gen_rsa.cpp  log..20080616  realchat.kz  rsa1024.ser  rsa128.ser  rsa512.ser  rsa64.ser  sign.cpp  sign1.cpp  sign_cf.cpp  sign_cf_verify.cpp  tusa.kz  webchat  webchat.lic  webicq.net  webicq.net.demo  webicq.net.demo.lic  webicq.net.lic
tusa-8.395/bot/: common.conf  conf  girl.conf  mafia.conf  mat.conf  quiz.conf  roulette.conf
tusa-8.395/bot/bot-girl/: cmd.cpp  cmd.h  girl.cpp  girl.h
tusa-8.395/bot/bot-mafia-new/: MAFIA.MESSAGES  command.cpp  command.h  day.cpp  day.h  game.cpp  game.h  mafia.cpp  mafia.h  messages.cpp  messages.h  night.cpp  night.h  user.cpp  user.h
tusa-8.395/bot/bot-mat/: cmds.cpp  cmds.h  mat.cpp  mat.h
tusa-8.395/bot/bot-quiz-oscar/: game.cpp  game.h  quiz.cpp  (+1 more)
tusa-8.395/chatserver/: 11.cpp  CH_id.h  CMakeLists.txt  S_id.h  _CFLAGS_R  __c.i  admin.cpp  admin.h  admin_ban.cpp  admin_old_ban.cpp  admin_other.cpp  admin_privs.cpp  admin_settings.cpp  app_con.cpp  app_con.h  app_def.h  app_server.cpp  app_server.h  bc.sql  channels.cpp  channels.h  chat_channel_data.h  chat_colors.cpp  chat_colors.h  chat_config.cpp  chat_config.h  chat_def.h  chat_globals.cpp  chat_globals.h  chat_msg.cpp  chat_msg.h  chat_stuff.h  chat_thread.cpp  chat_thread_2.cpp  chat_thread_event.h  chatserver.cpp  cm_container.h  conf  config.cpp  contact_vec.cpp  (+66 more)
tusa-8.395/core/: CMakeLists.txt  DB_id.h  Double.cpp  Double.h  M_DEQUE.h  M_HASHMAP.h  M_LIST.h  M_MAP.h  M_SET.h  Makefile  PTR.cpp  PTR.h  _QUERY.cpp  _QUERY.h  __main.cpp  _mutex.cpp  _mutex.h  _mutex1.cpp  _mutex1.h  cMYSQL.h  cf_utils.cpp  copy_file.h  copy_file_common.cpp  core.cpp  core.i  core_main.cpp  d_var.h  db_config.cpp  db_config.h  db_config2.h  db_maps.cpp  db_maps.h  db_var.h  des_locl.h  des_sid.cpp  des_sid.h  errs.cpp  errs.h  file_set.cpp  file_set.h  (+41 more)
tusa-8.395/core-web/: CMakeLists.txt  c_conn.cpp  c_conn.h  core_web.cpp  html_out.cpp  html_out.h  oscar_client.cpp  oscar_client.h  tcp_dialog_server.cpp  tcp_dialog_server.h  tcp_oscar_dialog_server.cpp  tcp_oscar_dialog_server.h  tcp_sender.cpp  tcp_sender.h  tcp_server.cpp  tcp_server.h  tcp_server_connection.cpp  tcp_server_connection.h  tcp_server_data.h  thread_info.cpp  thread_info_report.cpp  web_adminfo.cpp  web_cache.h  web_connection.cpp  web_connection.h  web_connection_ptcp.cpp  web_server.cpp  web_server.h  web_server_data.h  web_tools.cpp  web_tools.h  z
tusa-8.395/db/: bot.sql  chat.empty.sql  mafia.sql
tusa-8.395/rsa-keys/: egorod  egorod.lic  hotchat  hotchat.lic  rsa.pub
(+357 files in other folders)
